[gd_scene load_steps=11 format=3 uid="uid://bimociwid02ia"]

[ext_resource type="Script" path="res://code/winner.gd" id="1_n0em3"]
[ext_resource type="Texture2D" uid="uid://dravm6dli77kc" path="res://images/bg.png" id="1_v6kdm"]
[ext_resource type="Theme" uid="uid://3ny4m17to87t" path="res://Default.tres" id="2_6hdne"]
[ext_resource type="FontFile" uid="uid://dje7nt7quhun8" path="res://fonts/PressStart2P-Regular.ttf" id="3_jr5n4"]
[ext_resource type="AudioStream" uid="uid://cwutu0k1fbag5" path="res://music/win-sound.mp3" id="5_6aat5"]
[ext_resource type="AudioStream" uid="uid://ch8nwp7nneatp" path="res://music/ui_hover1.mp3" id="6_hifes"]
[ext_resource type="AudioStream" uid="uid://b1eap41opp8eb" path="res://music/ui_press.mp3" id="7_beta5"]

[sub_resource type="Animation" id="Animation_0r2kn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_5xoca"]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3i3fh"]
_data = {
"RESET": SubResource("Animation_0r2kn"),
"fade out": SubResource("Animation_5xoca")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n0em3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v6kdm")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_6hdne")

[node name="you_win" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -405.0
offset_top = -267.0
offset_right = 405.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.894118, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("3_jr5n4")
theme_override_font_sizes/font_size = 90
text = ">VICTORY<"
horizontal_alignment = 1

[node name="score" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -44.0
offset_right = 125.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jr5n4")
text = "Your score:0000"

[node name="czas" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -2.5
offset_right = 116.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jr5n4")
text = "Collected time: 0"

[node name="message" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -119.0
offset_right = 424.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "You managed to complete the level and
 descend further into unknown"
horizontal_alignment = 1

[node name="do_menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.5
offset_top = 106.0
offset_right = 168.5
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../restart")
theme = ExtResource("2_6hdne")
theme_override_fonts/font = ExtResource("3_jr5n4")
theme_override_font_sizes/font_size = 30
text = "MENU"

[node name="restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = 211.0
offset_right = 169.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_bottom = NodePath("../do_menu")
theme = ExtResource("2_6hdne")
theme_override_fonts/font = ExtResource("3_jr5n4")
theme_override_font_sizes/font_size = 30
text = "RESTART"

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6aat5")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hifes")

[node name="press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_beta5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="black_screen" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_3i3fh")
}

[connection signal="focus_entered" from="do_menu" to="." method="_on_do_menu_focus_entered"]
[connection signal="mouse_entered" from="do_menu" to="." method="_on_do_menu_mouse_entered"]
[connection signal="pressed" from="do_menu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="do_menu" to="." method="_on_do_menu_pressed"]
[connection signal="focus_entered" from="restart" to="." method="_on_restart_focus_entered"]
[connection signal="mouse_entered" from="restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
